# microblog

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  README.md  babel.cfg  boot.sh  config.py  microblog.py  pyproject.toml  tests.py
app/: __init__.py  cli.py  email.py  errors.py  forms.py  models.py  package-lock.json  package.json  pnpm-lock.yaml  routes.py  search.py  tasks.py  translate.py
app/api/: __init__.py  auth.py  errors.py  tokens.py  users.py
app/auth/: email.py  forms.py  routes.py
app/errors/: handlers.py
app/main/: forms.py  routes.py
app/static/css/: input.css
app/static/js/: calcTextareaCharsLeft.js  calcTextareaCharsLeft.min.js  showNotifications.js  showPopover.js  themeSwitch.js  themeSwitch.min.js  toggleSearch.js  toggleSearch.min.js  translatePost.js  translatePost.min.js
app/templates/: 404.html  500.html  _alert_info.html  _form_helpers.html  _form_new_post.html  _post.html  _show_posts.html  _task_progress.html  base.html  edit_profile.html  index.html  login.html  messages.html  register.html  reset_password.html  reset_password_request.html  send_message.html  simple_form.html  user.html  user_popup.html
app/templates/auth/: login.html  register.html  reset_password.html  reset_password_request.html
migrations/versions/: 217d98167af0_followers.py  23511d7c031e_new_fields_in_user_model.py  360ec48370bd_tasks.py  73cb5a547ab9_posts_table.py  bbc9dfe04e48_notifications.py  edd33dcae36a_users_table.py  f37c46ac8ffb_private_messages.py  f3e4762452ec_add_language_to_posts.py  fa7a8e8ce686_user_tokens.py
(+8 files in other folders)
